# AI-News-Aggregator

./: pyproject.toml  streamlit_app.py
.github/workflows/: daily.yml
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/api/: main.py
app/database/: connection.py  models.py  repository.py
app/profiles/: user_profile.py
app/services/: process_email.py
app/ui/: cards.py  charts.py  dashboard.py  sidebar.py  utils.py
assets/: style.css
frontend/: index.html
