[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "docling>=2.61.2",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "feedparser>=6.0.12",
    "groq>=1.4.0",
    "markdown>=3.7.0",
    "markdownify>=0.11.6",
    "openai>=2.7.2",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.32",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
